sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:2: error: ';' expected but 'def' found.
}def cocktailSort2() {
 ^AlgCocktailSort2:40: error: Unmatched closing brace '}' ignored here
}
^